[project]
name = "nat-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nvidia-nat[langchain,opentelemetry]==1.3.1",
    "requests>=2.32.5",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64"]


[project.entry-points.'nat.components']
nat_demo = "nat_demo.register"
